[package]
name = "bevy_mod_debugdump"
version = "0.6.0"
repository = "https://github.com/jakobhellermann/bevy_mod_debugdump"
readme = "README.md"
license = "MIT"
description = "Visualization for bevy"
keywords = ["bevy", "inspector", "visual", "editor", "game"]
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2021"
exclude = ["docs/*"]

[features]
default = ["render_graph"]
render_graph = ["bevy_render"]

[dependencies]
bevy_ecs = { version = "0.9", default-features = false, path = "../bevy/crates/bevy_ecs" }
bevy_app = { version = "0.9", default-features = false, path = "../bevy/crates/bevy_app" }
bevy_render = { version = "0.9", default-features = false, optional = true, path = "../bevy/crates/bevy_render" }
pretty-type-name = "1.0"

[dev-dependencies]
bevy = { version = "0.9", path = "../bevy" }

[[example]]
name = "print_schedule_graph"

[[example]]
name = "print_render_graph"
required-features = ["render_graph"]

[[example]]
name = "print_render_schedule_graph"
required-features = ["render_graph"]

# [patch."https://github.com/bevyengine/bevy"]
# bevy = { path = "/home/jakob/dev/rust/contrib/bevy/bevy" }
